objects/pse__Skill_Certification_Zone__c.object
<CustomObject>
    <customHelpPage>pse__SkillCertificationZoneHelp</customHelpPage>
    <description>Identifies a region, practice, or group under which resources may be rated for a skill.</description>
    <fields>
        <fullName>pse__Cascading__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cascading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Skill / Certification Zones</relationshipLabel>
        <relationshipName>Skill_Certification_Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Skill / Certification Zones</relationshipLabel>
        <relationshipName>Skill_Certification_Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Skill / Certification Zones</relationshipLabel>
        <relationshipName>Skill_Certification_Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Skill_Certification__c</fullName>
        <label>Skill / Certification</label>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipLabel>Skill / Certification Zones</relationshipLabel>
        <relationshipName>Skill_Certification_Zones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Skill / Certification Zone</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Skill_Certification__c</columns>
        <columns>pse__Cascading__c</columns>
        <columns>pse__Region__c</columns>
        <columns>pse__Practice__c</columns>
        <columns>pse__Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SZ-{0}</displayFormat>
        <label>Skill / Certification Zone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill / Certification Zones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Skill_Must_be_for_Exactly_One_Zone_RPG</fullName>
        <active>true</active>
        <description>The Skill Zone must specify either a Region or a Practice or a Group for which it applies, but no more than one.</description>
        <errorConditionFormula>OR(AND(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;)),OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;)),OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;))),AND(NOT(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;))),NOT(OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;)))),AND(NOT(OR(ISNULL(pse__Region__c),(pse__Region__c=&apos;&apos;))),NOT(OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;)))),AND(NOT(OR(ISNULL(pse__Practice__c),(pse__Practice__c=&apos;&apos;))),NOT(OR(ISNULL(pse__Group__c),(pse__Group__c=&apos;&apos;)))))</errorConditionFormula>
        <errorMessage>The Skill Zone must specify either a Region or a Practice or a Group for which it applies (but no more than one).</errorMessage>
    </validationRules>
</CustomObject>